www/react: Fix alignment problems after migrating off FontAwesome
FontAwesome provided pull-right and pull-left CSS classes which Buildbot
frontend uses. These have been replaced with equivalent style rules.

--- a/www/react-base/src/components/BuildSticker/BuildSticker.scss
+++ b/www/react-base/src/components/BuildSticker/BuildSticker.scss
@@ -10,6 +10,10 @@
     overflow: hidden;
     margin-left: 0;
     margin-right: 0;
+
+    > .bb-badge-status, > .bb-buildsticker-time {
+      float: right;
+    }
   }
 
   &.results_SUCCESS {
