--- a/www/react-base/src/components/BuildSummary/BuildSummary.scss
+++ b/www/react-base/src/components/BuildSummary/BuildSummary.scss
@@ -9,7 +9,8 @@
     border-top-right-radius: 3px;
   }
 
-  .bb-build-summary-details {
+  .bb-build-summary-details,
+  .bb-build-summary-time {
     float: right;
   }
 
