--- a/www/react-base/src/components/LogPreview/LogPreview.scss
+++ b/www/react-base/src/components/LogPreview/LogPreview.scss
@@ -7,6 +7,10 @@
   margin-bottom: 0;
 }
 
+.bb-log-preview-download {
+  float: right;
+}
+
 .logline > span {
   white-space: nowrap;
 }
