--- a/www/react-ui/src/components/BuildSummaryTooltip/BuildSummaryTooltip.scss
+++ b/www/react-ui/src/components/BuildSummaryTooltip/BuildSummaryTooltip.scss
@@ -4,3 +4,11 @@
   line-height: 0.75em;
   vertical-align: -15%;
 }
+
+.bb-buildsummary-tooltip-step-badge, .bb-buildsummary-tooltip-step-name {
+  float: left;
+}
+
+.bb-buildsummary-tooltip-step-time {
+  float: right;
+}
